docs: rewrite CONTRIBUTING.md as a full contributor guide
Replace the design-round stub with a complete guide: prerequisites, JVM/native build and run commands, testing and coverage gates, native-first rules, coding and commit conventions, the issue/PR flow, branch targets, and license. Co-author trailers welcome for AI-assisted commits.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>